fix hamburget z-index

--- a/style.scss
+++ b/style.scss
@@ -285,11 +285,11 @@ header {
 	left: 0;
 	top: 0;
 	width: 100%;
-	z-index: 20;
 	padding: 15px 30px;
 	transition: 0.2s all ease;
 	display: grid;
 	grid-template-columns: 1fr auto 1fr;
+	z-index: 90;
 
 	.left-header{
 		display: flex;
@@ -334,6 +334,7 @@ header.nonTransparent{
 	background-color: white;
 	top: 0;
 	transition: all 0.1s ease;
+	
 	.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after{
 		background-color: $theblue;
 	}
@@ -356,7 +357,9 @@ header.nonTransparent{
 		padding: 0 30px ;
 		border-top:solid 0.1px rgba(128, 128, 128, 0.37);
 		transition: all ease 0.1s;
-		z-index: 100;
+		z-index: 91;
+		
+	
 		
 	
 		
@@ -365,12 +368,13 @@ header.nonTransparent{
 			margin:0;
 			width:30%;
 			font-family: 'din_condensedbold';
+			font-size: 24px;
 		}	
 		ul{
 			display: flex;
 			width: 70%;
 			max-width: 600px;
-			
+			font-size: 20px;
 			justify-content: space-between;
 			margin: 0;
 			font-family: 'CircularStdBook';
@@ -538,7 +542,6 @@ header.nonTransparent{
 /*------closeBookingMenuButton------*/
 .closeButton {
 	padding: 10px 0px;
-	z-index: 2;
 	position: relative;
 	display: inline-block;
 	cursor: pointer;
@@ -628,7 +631,7 @@ header.nonTransparent{
 
 .hamburger {
 	padding: 10px 0px;
-	z-index: 2;
+	z-index: 90;
 	position: relative;
 	display: inline-block;
 	cursor: pointer;
@@ -642,8 +645,11 @@ header.nonTransparent{
 	border: 0;
 	margin: 0;
 	overflow: visible;
-	z-index: 99;
+	z-index: 90;
+	
+	
 }
+
 
 .hamburger:hover {
 	opacity: 0.7;
@@ -656,11 +662,14 @@ header.nonTransparent{
 .hamburger:focus {
 	outline: none;
 }
-
+.hamburger.is-active{
+	z-index: 93;
+}
 .hamburger.is-active .hamburger-inner,
 .hamburger.is-active .hamburger-inner::before,
 .hamburger.is-active .hamburger-inner::after {
 	background-color: #071D49!important;
+	
 }
 
 .hamburger-box {
@@ -735,16 +744,22 @@ header.nonTransparent{
 
 .hamburger--slider.is-active .hamburger-inner {
 	transform: translate3d(0, 10px, 0) rotate(45deg);
+	
+
 
 }
 
 .hamburger--slider.is-active .hamburger-inner::before {
 	transform: rotate(-45deg) translate3d(-5.71429px, -6px, 0);
 	opacity: 0;
+
+	
 }
 
 .hamburger--slider.is-active .hamburger-inner::after {
 	transform: translate3d(0, -20px, 0) rotate(-90deg);
+	
+	
 }
 
 /* ---- overlayNav-------------------*/
@@ -767,7 +782,7 @@ header.nonTransparent{
   	gap: 0px 0px;
  	 grid-template-areas:
 	"leftMenu rightMenu";
-	z-index: 30;
+	z-index: 91;
 
 	
 
